# clap-man-demo

./: Cargo.toml  Readme.md  build.rs
src/: cli.rs  main.rs
